--- a/styles/default.css
+++ b/styles/default.css
@@ -28,7 +28,6 @@ body {
   font-family: Gill Sans, Verdana, Helvetica, sans-serif;
   font-size: 9pt; text-align: center}
 
-a, a:visited {color: #242;}
 a.describe {margin-right: 6px}
 
 pre {
@@ -141,7 +140,7 @@ a.logo { margin-left: 10px; float: left;}
 #MD { width: 100%; 
       float: left; 
       margin-top: 0; 
-      background-color: #e9f2f7; 
+      background-color: white;
       padding-bottom: 10px; 
       margin-left: auto; margin-right: auto;}
 
