reverted /describe abstract width

--- a/css/default.css
+++ b/css/default.css
@@ -247,7 +247,7 @@
    float: left;
    clear: left;
   /*width: auto;*/
-   width: 49.5%;
+   /*width: 49.5%;*/
    text-align: left; 
    font-style: italic; 
    font-size: 21px; 
