--- a/css/default.css
+++ b/css/default.css
@@ -171,7 +171,9 @@
    background-color: #ddd;}
  
  #MD div#settings { 
-   margin: 10px;
+   margin-left: auto;
+   margin-right: auto;
+   margin-top: 129px;
  }
  
  #MD div#settings label { }
@@ -642,6 +644,7 @@
      clear: left;
      text-align: center;
      margin-left: 50px;
+     /*margin-top: -128px*/
  }
  
  a#sp_link { font-size: 9pt; font-weight:normal; }
@@ -850,3 +853,20 @@ label[for="ft_q"], #map_link {
 .n1 li form input[value=Set] {
     margin-left: 10px;
 }
+
+/*#desc-tbl {height: 992px}*/
+
+#infoModal{
+  font-size: 16px;
+  font-weight: normal;
+}
+
+div#\#md-options {
+  margin-left: auto;
+  margin-top: 140px;
+}
+
+/*#hd_about{
+  margin-top: -19px;
+  margin-right: -3px;
+}*/
