Fixed QR-Code box appearance issue

--- a/css/default.css
+++ b/css/default.css
@@ -939,3 +939,9 @@ span.partial_res_expln{
 #retry-btn{
 cursor: pointer;
 }
+
+/*QR COde Fix*/
+
+.ui-dialog.ui-widget.ui-widget-content.ui-corner-all.ui-front.ui-draggable.ui-resizable {
+  margin-top: 100px;
+}
