Moved QR Code location to bottom right of page

--- a/css/default.css
+++ b/css/default.css
@@ -940,8 +940,12 @@ span.partial_res_expln{
 cursor: pointer;
 }
 
-/*QR COde Fix*/
+/*Fix QR Code display*/
 
 .ui-dialog.ui-widget.ui-widget-content.ui-corner-all.ui-front.ui-draggable.ui-resizable {
   margin-top: 100px;
+  position: absolute; 
+  height: 180.016px; 
+  width: 160px; 
+  inset: 701.969px auto auto 1627px;
 }
